--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "start": "nuxt start",
     "export": "nuxt export",
     "serve": "nuxt serve",
-    "generate": "nuxt generate",
-    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup",
-    "heroku-postbuild": "npm run build"
+    "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/firebase": "^6.1.1",
+    "firebase": "^7.19.1",
     "nuxt": "^2.13.0"
   },
   "devDependencies": {
